[refactor] #90 Mejorar Arquitectura Backend: Corrección fallos de arquitectura y estructurales e implementación de arquitectura hexagonal en el submódulo iaa